fix for retrofit `WARNING: Illegal reflective access by retrofit2.Platform` (#700)
see square/retrofit/issues/3341